--- a/app/views/vote/results.html.erb
+++ b/app/views/vote/results.html.erb
@@ -5,6 +5,7 @@
 				<img style="height: 250px; width: 250px" src=<%= result[:photo_url] %>></img>
 			</div>
 			<div class="col">
+				<div><%= "Food is #{result[:food]}" %></div>
 				<div><%= "Soup is #{result[:soup]}" %></div>
 				<div><%= "Sandwhich is #{result[:sandwhich]}" %></div>
 				<div><%= "Salad is #{result[:salad]}" %></div>
